Aligned the message form correctly

--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -17,9 +17,9 @@
         }
         .popup .content {
             position: absolute;
-            top: 64%;
+            top: 50%;
             left: 50%;
-            margin: -43px 0 0 0;
+            margin: 325px 0 0 0;
             transform: translate(-50%, -50%) scale(0);
             background: #fff;
             width: 760px;
@@ -80,8 +80,9 @@
         }
         .popup .content {
             position: absolute;
-            top: 63%;
+            top: 50%;
             left: 50%;
+            margin: 330px 0 0 0;
             transform: translate(-50%, -50%) scale(0);
             background: #fff;
             width: 98%;
